; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_health_srv.c_health_is_test_id_exist.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_health_srv.c_health_is_test_id_exist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_model = type { %struct.bt_mesh_health_srv* }
%struct.bt_mesh_health_srv = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bt_mesh_model*, i64)* @health_is_test_id_exist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @health_is_test_id_exist(%struct.bt_mesh_model* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bt_mesh_model*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.bt_mesh_health_srv*, align 8
  %7 = alloca i64, align 8
  store %struct.bt_mesh_model* %0, %struct.bt_mesh_model** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %4, align 8
  %9 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %8, i32 0, i32 0
  %10 = load %struct.bt_mesh_health_srv*, %struct.bt_mesh_health_srv** %9, align 8
  store %struct.bt_mesh_health_srv* %10, %struct.bt_mesh_health_srv** %6, align 8
  store i64 0, i64* %7, align 8
  br label %11

11:                                               ; preds = %30, %2
  %12 = load i64, i64* %7, align 8
  %13 = load %struct.bt_mesh_health_srv*, %struct.bt_mesh_health_srv** %6, align 8
  %14 = getelementptr inbounds %struct.bt_mesh_health_srv, %struct.bt_mesh_health_srv* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ult i64 %12, %16
  br i1 %17, label %18, label %33

18:                                               ; preds = %11
  %19 = load %struct.bt_mesh_health_srv*, %struct.bt_mesh_health_srv** %6, align 8
  %20 = getelementptr inbounds %struct.bt_mesh_health_srv, %struct.bt_mesh_health_srv* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i64*, i64** %21, align 8
  %23 = load i64, i64* %7, align 8
  %24 = getelementptr inbounds i64, i64* %22, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* %5, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %18
  store i32 1, i32* %3, align 4
  br label %34

29:                                               ; preds = %18
  br label %30

30:                                               ; preds = %29
  %31 = load i64, i64* %7, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %7, align 8
  br label %11

33:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %28
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
